# BlueKnob

./: .gitignore  readme.md
.github/ISSUE_TEMPLATE/: default-issue-template.md
BlueKnob-ESP32/: CMakeLists.txt  sdkconfig
BlueKnob-ESP32/main/: CMakeLists.txt  main.c
BlueKnob-ESP32S3/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
BlueKnob-ESP32S3/components/audio_bsp/: audio_bsp.c
BlueKnob-ESP32S3/components/esp_lcd_sh8601/: esp_lcd_sh8601.c
BlueKnob-ESP32S3/components/esp_wifi_bsp/: CMakeLists.txt  esp_wifi_bsp.c  esp_wifi_bsp.h
BlueKnob-ESP32S3/main/: CMakeLists.txt  auth.h.example  constants.cpp  main.cpp  settings.h
BlueKnob-ESP32S3/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
BlueKnob-ESP32S3/main/ui/images/: ui_img_bg001_png.c  ui_img_bg002_png.c  ui_img_bg003_png.c  ui_img_bg004_png.c  ui_img_bg005_png.c  ui_img_bg006_png.c  ui_img_bg007_png.c  ui_img_bg008_png.c  ui_img_bg009_png.c  ui_img_bg010_png.c  ui_img_bg011_png.c  ui_img_bg012_png.c  ui_img_bg013_png.c  ui_img_bg014_png.c  ui_img_bg015_png.c  ui_img_bg016_png.c  ui_img_bg017_png.c  ui_img_bg018_png.c  ui_img_bg019_png.c  ui_img_bg020_png.c  ui_img_bg021_png.c  ui_img_bg022_png.c  ui_img_bg023_png.c  ui_img_bg024_png.c  ui_img_trackpad_png.c
BlueKnob-ESP32S3/main/ui/screens/: ui_screenBlank.c  ui_screenBlank.h  ui_screenDpad.c  ui_screenDpad.h  ui_screenMediaControls.c  ui_screenMediaControls.h  ui_screenSettings.c  ui_screenSettings.h  ui_screenTrackpad.c  ui_screenTrackpad.h
extras/: knob-grip-tpu.stl
(+11 files in other folders)
